--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>EZ Reader</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
-    <script src="http://www.dialed.com/main.js"></script>
-    <link rel="stylesheet" type="text/css" href="http://www.dialed.com/main.css">
+    <script src="./javascripts/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="./stylesheets/main.css">
 
   </head>
   <body>
